Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@ Hier muss dann entschieden werden, welche Datenpunkte geloggt werden sollen und 
 
 <p>Hier mal ein Beispiel einer mit Highcharts erstellen Grafik mit einigen Daten aus der Vitotronic.
 <img src="http://www.fotos-hochladen.net/uploads/aufgedreht4viv63duj5qk0.png" alt="Beispielgraph"></p>
+
+<p>Abschließend sei gesagt, dass ich keinerlei Verantwortung für eventuelle Schäden an was auch immer übernehme. Bevor man Daten in der Vitotronic setzt, sollte man genau wissen, welche Werte und Einheiten überhaupt möglich, erlaut oder sinnvoll sind.</p>
       </section>
     </div>
 
